# boxer_manipulation

./: README.md  kinova.rosinstall
boxer_dual_gen3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
boxer_dual_gen3_moveit_config/config/: boxer.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
boxer_dual_gen3_moveit_config/launch/: boxer_dual_gen3_moveit_planning_execution.launch  boxer_gen3_moveit_planning_execution.launch  boxer_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
boxer_franka_description/: CMakeLists.txt  package.xml
boxer_franka_description/scripts/: setup_boxer_panda_envar  setup_boxer_panda_hand_envar
boxer_franka_description/urdf/: boxer_panda_description.urdf.xacro  boxer_panda_hand_description.urdf.xacro
boxer_gen3_moveit_config/: CMakeLists.txt  package.xml
boxer_gen3_moveit_config/config/: boxer.srdf  ros_controllers.yaml
boxer_gen3_moveit_config/launch/: boxer_moveit_controller_manager.launch.xml  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
boxer_gen3_moveit_config/scripts/: customize_moveit.sh
boxer_iiwa_description/: CMakeLists.txt  package.xml
boxer_iiwa_description/scripts/: setup_boxer_iiwa_7_envar
boxer_iiwa_description/urdf/: boxer_iiwa_7_description.urdf.xacro
boxer_iiwa_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
boxer_iiwa_moveit_config/config/: boxer.srdf  ros_controllers.yaml
boxer_iiwa_moveit_config/launch/: boxer_moveit_controller_manager.launch.xml  boxer_moveit_planning_execution.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
boxer_iiwa_moveit_config/scripts/: customize_moveit.sh
boxer_kinova_bringup/: CMakeLists.txt  package.xml
boxer_kinova_bringup/launch/: boxer_dual_gen3_bringup.launch  boxer_dual_kinova_bringup.launch  boxer_gen3_bringup.launch
boxer_kinova_description/: CMakeLists.txt  package.xml
boxer_kinova_description/scripts/: setup_boxer_dual_gen3_envar  setup_boxer_dual_gen3_robotiq_2f_140_envar  setup_boxer_dual_gen3_robotiq_2f_85_envar  setup_boxer_gen3_envar  setup_boxer_gen3_robotiq_2f_140_envar  setup_boxer_gen3_robotiq_2f_85_envar  setup_boxer_j2n6s200_envar  setup_boxer_j2n6s300_envar  setup_boxer_j2n7s300_envar  setup_boxer_j2s6s300_envar  setup_boxer_j2s7s300_envar
boxer_kinova_description/urdf/: boxer_dual_gen3_description.urdf.xacro  boxer_dual_gen3_robotiq_2f_140_description.urdf.xacro  boxer_dual_gen3_robotiq_2f_85_description.urdf.xacro  boxer_gen3_description.urdf.xacro  boxer_gen3_robotiq_2f_140_description.urdf.xacro  boxer_gen3_robotiq_2f_85_description.urdf.xacro  boxer_j2n6s200_description.urdf.xacro  boxer_j2n6s300_description.urdf.xacro  boxer_j2n7s300_description.urdf.xacro  boxer_j2s6s300_description.urdf.xacro  boxer_j2s7s300_description.urdf.xacro  boxer_kinova_description.urdf.xacro
boxer_manipulation/: CMakeLists.txt  package.xml
boxer_manipulation_description/: CMakeLists.txt  package.xml
boxer_manipulation_description/meshes/: dual_arm_tower.stl  small_upper_plate.stl  upper_supports.stl
boxer_manipulation_description/urdf/: boxer_dual_arm_tower.urdf.xacro  boxer_upper_mount.urdf.xacro
boxer_ur_bringup/: CMakeLists.txt  package.xml
boxer_ur_bringup/launch/: boxer_dual_ur_bringup.launch  boxer_ur_bringup.launch  boxer_ur_modern_bringup.launch  boxer_ur_official_bringup.launch
boxer_ur_description/: CMakeLists.txt  package.xml
boxer_ur_description/scripts/: setup_boxer_ur5_e_envar  setup_boxer_ur5_envar
boxer_ur_description/urdf/: boxer_ur5_description.urdf.xacro  boxer_ur5_e_description.urdf.xacro
