<?xml version="1.0"?>
<package format="2">
  <name>boxer_manipulation</name>
  <version>0.0.0</version>
  <description>The boxer_manipulation package</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>
  <author email="dniewinski@clearpathrobotics.com">Dave Niewinski</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>boxer_franka_description</exec_depend>
  <exec_depend>boxer_iiwa_description</exec_depend>
  <exec_depend>boxer_kinova_description</exec_depend>
  <exec_depend>boxer_ur_description</exec_depend>
  <exec_depend>boxer_ur_bringup</exec_depend>
  <exec_depend>boxer_kinova_bringup</exec_depend>
  <exec_depend>boxer_manipulation_description</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
