<?xml version="1.0"?>
<package format="2">
  <name>boxer_manipulation_description</name>
  <version>0.0.0</version>
  <description>The boxer_manipulation_description package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
