<?xml version="1.0"?>
<package format="2">
  <name>boxer_ur_description</name>
  <version>0.0.0</version>
  <description>The boxer_ur_description package</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>
  <author email="dniewinski@clearpathrobotics.com">Dave Niewinski</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>boxer_description</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_e_description</exec_depend>

  <export>
  </export>
</package>
